# QueroLerBot

./: .gitignore  README.md  accounts.json  antipay.py  app.py  articles.db  classes  config.toml  database.py  default.nix  flake.nix  keys.py  last_id  module.nix  news_classes.json  pyproject.toml  requirements.txt  result  telegraph.nix
querolerbot/: __init__.py  __main__.py  antipay.py  config.py  database.py
