[tool.poetry]
name = "querolerbot"
version = "0.1.0-beta"
description = "Um bot de twitter que remove paywalls!"
authors = ["gp2112 <me@guip.dev>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
telegraph = "^2.1.0"
toml = "^0.10.2"
requests-oauthlib = "^1.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
querolerbot = "querolerbot.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
