[project]
name = "querolerbot"
version = "1.0.0-beta"
description = "Um bot de twitter que remove paywalls!"
authors = ["gp2112 <me@guip.dev>"]
license = {file = "LICENSE"}

[project.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
telegraph = "^2.1.0"
toml = "^0.10.2"
requests-oauthlib = "^1.3.1"


[project.scripts]
querolerbot = "querolerbot.__main__:main"
